# ld51-every-10-seconds

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
src/: Sandbox.qml  main.cpp
src/qml/: AssetProvider.qml  GameApp.qml  GameInfoScreen.qml  GameScene.qml  SharedState.qml  main.qml  qml.qrc
src/qml/details/: Asteroid.qml  AsteroidDestructor.qml  AsteroidFactory.qml  GameSound.qml  LivingEntity.qml  SpaceBackground.qml  SpaceBoundary.qml  Spaceship.qml  SpriteBoxBody.qml  Star.qml
src/scene/: scene.qrc
src/sound/: sound.aup3  sound.qrc
src/visual/: visual.qrc
